网络框架搭建完毕

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,10 @@
     <!--material dialog-->
     <string name="material_dialog_sure">确定</string>
     <string name="material_dialog_cancel">取消</string>
-    <string name="pwd_format_error">密码格式不正确，请输入6-16位数字和大小写字 母组合的密码</string>
+    <string name="pwd_format_error">密码格式不正确，请输入6-16位数字和大小写字母组合的密码</string>
     <string name="auth_code_error">验证码不正确，请重新输入</string>
+    <!--权限申请框-->
+    <string name="perssion_tip">权限申请</string>
+    <string name="perssion_go_setting">去设置</string>
+    <string name="perssion_cancel">取消</string>
 </resources>
