--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="perssion_cancel">取消</string>
     <string name="register_custom_dialog_tip">注册账号需要验证您的手机号码,\n验证短信将发送到以下手机号：\n%s</string>
     <string name="logout_warning_string">你确认要退出当前账号吗？</string>
+    <string name="perssion_camera_tip">在设置-应用-i家帮-权限中开启相机权限，以正常使用拍照、扫一扫等功能</string>
 </resources>
