--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="perssion_camera_tip">在设置-应用-i家帮-权限中开启相机权限，以正常使用拍照、扫一扫等功能</string>
     <string name="rob_hall_empty_tip">当前还没有报修订单</string>
     <string name="property_often_text">设为\n常用</string>
+    <string name="property_no_join">您未加入任何物业公司</string>
 </resources>
