--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,11 @@
     <string name="processed">已处理</string>
     <string name="complain_suggest_untreated_empty">还没有未处理的投诉建议</string>
     <string name="complain_suggest_processed_empty">还没有已处理的投诉建议</string>
+    <!--投诉建议-->
+    <string name="underway">进行中</string>
+    <string name="finished">已完成</string>
+    <string name="myorder_underway_empty">您还没有进行中的订单</string>
+    <string name="myorder_finished_empty">您还没有已完成的订单</string>
 
 
 </resources>
