--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="myorder_fee_confirm">我已完成修复</string>
     <string name="myorder_wait_pay">等待用户支付</string>
     <string name="myorder_wait_evaluate">等待用户评价</string>
+    <string name="visitorlist_empty_text">当前还没有访客</string>
 
 
 </resources>
