我的表单列表完成

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,7 +43,6 @@
     <string name="myorder_fee_confirm">我已完成修复</string>
     <string name="myorder_wait_pay">等待用户支付</string>
     <string name="myorder_wait_evaluate">等待用户评价</string>
-    <string name="visitorlist_empty_text">当前还没有访客</string>
     <!--主页-->
     <string name="main_empty_text">系统维护中，请与物业公司联系</string>
     <!--我的任务-->
@@ -51,4 +50,5 @@
     <string name="mytask_finished_empty">您还没有已完成的任务</string>
     <!--表单-->
     <string name="form_type_string">表单类型：</string>
+    <string name="myform_no_form_string">您还没有表单</string>
 </resources>
