注册添加姓名

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,5 @@
     <!--表单-->
     <string name="form_type_string">表单类型：</string>
     <string name="myform_no_form_string">您还没有表单</string>
+    <string name="register_name_error">姓名不能为空</string>
 </resources>
