--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="logo_text">i家帮 (员工版)</string>
 
     <!--通用-->
-    <string name="network_error_message">网络访问错误，请检查网络设置！</string>
+    <string name="network_error_message">网络连接失败，请检查网络设置！</string>
     <string name="connect_server_error">连接服务器失败！</string>
     <string name="login_phone_error">请输入正确的11位手机号</string>
     <string name="loading_text">请稍后...</string>
