Kotlin改写部分页面

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">i家帮</string>
+    <string name="app_name">i家帮员工端</string>
     <string name="register_account">
         <b>注册账户</b>
     </string>
